xtensa-fdpic: get rid of -mforce-l32 dependency
Signed-off-by: Max Filippov <jcmvbkbc@gmail.com>

--- a/package/Makefile.in
+++ b/package/Makefile.in
@@ -105,7 +105,7 @@ endif
 # instruction can only access literals in 256 KBytes range.
 #
 ifeq ($(BR2_xtensa),y)
-TARGET_ABI += -mfdpic -mauto-litpools -mforce-l32
+TARGET_ABI += -mfdpic -mauto-litpools
 endif
 
 STAGING_SUBDIR = $(GNU_TARGET_NAME)/sysroot
