configs/esp32s3wifi_defconfig: enable host openssl
Signed-off-by: Max Filippov <jcmvbkbc@gmail.com>

--- a/configs/esp32s3wifi_defconfig
+++ b/configs/esp32s3wifi_defconfig
@@ -15,6 +15,7 @@ BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="xtensa-6.5-rc1-esp32wifi"
 BR2_LINUX_KERNEL_DEFCONFIG="esp32s3wifi"
 BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
 BR2_LINUX_KERNEL_IMAGE_TARGET_NAME="xipImage"
+BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/espressif/esp32s3/busybox.config"
 BR2_PACKAGE_ZLIB=y
 BR2_PACKAGE_DROPBEAR=y
