--- a/configs/esp32s3wifi_defconfig
+++ b/configs/esp32s3wifi_defconfig
@@ -7,6 +7,7 @@ BR2_TOOLCHAIN_EXTERNAL_HEADERS_6_1=y
 BR2_TOOLCHAIN_EXTERNAL_WCHAR=y
 # BR2_TOOLCHAIN_EXTERNAL_HAS_THREADS_NPTL is not set
 BR2_TARGET_LDFLAGS="-mfdpic"
+BR2_ROOTFS_OVERLAY="board/espressif/esp32s3/rootfs_overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/espressif/esp32s3/trim-libnl.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
