configs/esp32s3wifi_defconfig: update kernel version
Switch to tagged version to make rebuild on kernel update easier

Signed-off-by: Max Filippov <jcmvbkbc@gmail.com>

--- a/configs/esp32s3wifi_defconfig
+++ b/configs/esp32s3wifi_defconfig
@@ -12,7 +12,7 @@ BR2_ROOTFS_POST_BUILD_SCRIPT="board/espressif/esp32s3/trim-libnl.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/jcmvbkbc/linux-xtensa.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="xtensa-6.5-rc1-esp32wifi"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="xtensa-6.5-rc1-esp32wifi-nfs"
 BR2_LINUX_KERNEL_DEFCONFIG="esp32s3wifi"
 BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
 BR2_LINUX_KERNEL_IMAGE_TARGET_NAME="xipImage"
