board/espressif/esp32s3: add persistent /etc
Add /etc/fstab to the board file system overlay with /etc in it so that
persistent configuration could be maintained on the device.
Add a script that makes JFFS2 file system image with /etc contents.
Enable building JFFS2 image. Although the result is called rootfs.jffs2,
in fact it's only /etc.

Signed-off-by: Max Filippov <jcmvbkbc@gmail.com>

--- a/configs/esp32s3wifi_defconfig
+++ b/configs/esp32s3wifi_defconfig
@@ -9,6 +9,7 @@ BR2_TOOLCHAIN_EXTERNAL_WCHAR=y
 BR2_TARGET_LDFLAGS="-mfdpic"
 BR2_ROOTFS_OVERLAY="board/espressif/esp32s3/rootfs_overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/espressif/esp32s3/trim-libnl.sh"
+BR2_ROOTFS_POST_FAKEROOT_SCRIPT="board/espressif/esp32s3/mkfs-etc.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/jcmvbkbc/linux-xtensa.git"
@@ -25,3 +26,5 @@ BR2_PACKAGE_WIRELESS_REGDB=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_TARGET_ROOTFS_CRAMFS=y
 BR2_TARGET_ROOTFS_CRAMFS_XIP=y
+BR2_TARGET_ROOTFS_JFFS2=y
+BR2_TARGET_ROOTFS_JFFS2_FLASH_64=y
