esp32s3: update config
- switch to kernel version with USB-UART driver
- change kernel config to one with CDC-ACM and no compression on JFFS2
  writes
- enable bootparam parsing in the kernel config

Signed-off-by: Max Filippov <jcmvbkbc@gmail.com>

--- a/board/espressif/esp32s3/linux.config
+++ b/board/espressif/esp32s3/linux.config
@@ -25,7 +25,6 @@ CONFIG_USER_ABI_CALL0_ONLY=y
 CONFIG_XTENSA_PLATFORM_ESP32=y
 CONFIG_USE_OF=y
 CONFIG_BUILTIN_DTB_SOURCE="esp32s3wifi"
-# CONFIG_PARSE_BOOTPARAM is not set
 CONFIG_MEMMAP_CACHEATTR=0xffff222f
 CONFIG_KERNEL_LOAD_ADDRESS=0x42120000
 CONFIG_VECTORS_ADDR=0x4037c000
@@ -83,6 +82,7 @@ CONFIG_ESP32_WIFI=y
 # CONFIG_SERIO is not set
 # CONFIG_VT is not set
 CONFIG_SERIAL_ESP32=y
+CONFIG_SERIAL_ESP32_ACM=y
 CONFIG_HW_RANDOM_ESP32=y
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_SYSCON=y
@@ -94,6 +94,8 @@ CONFIG_POWER_RESET_SYSCON=y
 # CONFIG_DNOTIFY is not set
 # CONFIG_INOTIFY_USER is not set
 CONFIG_JFFS2_FS=y
+CONFIG_JFFS2_COMPRESSION_OPTIONS=y
+CONFIG_JFFS2_CMODE_NONE=y
 CONFIG_CRAMFS=y
 CONFIG_CRAMFS_MTD=y
 CONFIG_NFS_FS=y
