--- a/board/espressif/esp32s3/linux.config
+++ b/board/espressif/esp32s3/linux.config
@@ -4,6 +4,7 @@ CONFIG_PREEMPT=y
 CONFIG_VIRT_CPU_ACCOUNTING_GEN=y
 # CONFIG_INITRAMFS_PRESERVE_MTIME is not set
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+CONFIG_EXPERT=y
 # CONFIG_FHANDLE is not set
 # CONFIG_BASE_FULL is not set
 # CONFIG_EPOLL is not set
@@ -14,13 +15,11 @@ CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_ADVISE_SYSCALLS is not set
 # CONFIG_MEMBARRIER is not set
 # CONFIG_KALLSYMS is not set
-CONFIG_EMBEDDED=y
 CONFIG_PERF_EVENTS=y
 CONFIG_XTENSA_VARIANT_CUSTOM=y
 CONFIG_XTENSA_VARIANT_CUSTOM_NAME="esp32s3"
 # CONFIG_XTENSA_VARIANT_MMU is not set
 CONFIG_XTENSA_UNALIGNED_USER=y
-CONFIG_XTENSA_LOAD_STORE=y
 CONFIG_USER_ABI_CALL0_ONLY=y
 CONFIG_XTENSA_PLATFORM_ESP32=y
 CONFIG_USE_OF=y
@@ -32,6 +31,7 @@ CONFIG_XIP_DATA_ADDR=0x3d800000
 CONFIG_DEFAULT_MEM_START=0x3d800000
 # CONFIG_SECCOMP is not set
 # CONFIG_STACKPROTECTOR is not set
+# CONFIG_GCC_PLUGINS is not set
 # CONFIG_COREDUMP is not set
 # CONFIG_VM_EVENT_COUNTERS is not set
 CONFIG_NET=y
@@ -84,6 +84,11 @@ CONFIG_ESP32_WIFI=y
 CONFIG_SERIAL_ESP32=y
 CONFIG_SERIAL_ESP32_ACM=y
 CONFIG_HW_RANDOM_ESP32=y
+CONFIG_PINCTRL=y
+CONFIG_PINCTRL_SINGLE=y
+CONFIG_GPIOLIB=y
+CONFIG_GPIO_SYSFS=y
+CONFIG_GPIO_ESP32=y
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_SYSCON=y
 # CONFIG_HWMON is not set
